--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "chart.js": "^4.4.8",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
