--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
-    "next": "15.2.1",
+    "next": "^16.0.8",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.11.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.1",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
